tests/samples/invalid/LoopsAchievement.py
# cases where LoopsAchievement should not unlock

# >> CASE
[None for _ in range(4)]

# >> CASE
pass
